--- a/pages/seller/adding-product.html
+++ b/pages/seller/adding-product.html
@@ -45,7 +45,8 @@
             <a
               href="/pages/registrations/create-account.html"
               class="header-elem__btn"
-              ><i class="bx bx-user-circle"></i><span>Profile</span>
+              ><i class="fa-solid fa-circle-user fa-2xl"></i
+              ><span>Profile</span>
             </a>
             <button class="translate-btn">Rus</button>
           </div>
