added user info box

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <section class="header-elem">
           <a href="index.html" class="header-elem__logo">
             <img src="images/logo-web.svg" alt="logo" />
-            <img src="images/logo-text.svg" alt="text" />
           </a>
           <a href="./pages/404-error.html" class="company">Company</a>
           <div class="phone-box">
@@ -217,9 +216,7 @@
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="images/back-images/white-logo.svg" alt="logo" /><img
-                src="images/back-images/white-text-logo.svg"
-                alt="logo"
+              ><img src="images/back-images/white-logo.svg" alt="logo"
             /></a>
             <span>
               <h3>Contact</h3>
@@ -228,7 +225,7 @@
               <a href="tel:+998909999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
+          <h5>©2023 <big>Best Offer Deals</big> all rights reserved</h5>
         </div>
       </div>
     </footer>
