--- a/pages/customer/product.html
+++ b/pages/customer/product.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Offers</title>
     <link rel="icon" href="/images/logo-web.svg" type="web-logo" />
-    <link rel="apple-touch-icon" href="images/logo-web.svg" />
+    <link rel="apple-touch-icon" href="/images/logo-web.svg" />
     <link href="https://fonts.cdnfonts.com/css/cunia" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css" />
     <link
@@ -63,7 +63,6 @@
         <section class="custom-header-elem">
           <a href="/index.html" class="custom-header-elem__logo">
             <img src="/images/logo-web.svg" alt="logo" />
-            <img src="/images/logo-text.svg" alt="text" />
           </a>
 
           <div class="expand-elements">
@@ -128,7 +127,7 @@
               <i class="fa-solid fa-circle-minus" id="minus"></i>
               <div>
                 <input type="number" id="numberInput" />
-                <p>psc</p>
+                <p>pcs</p>
               </div>
 
               <i class="fa-solid fa-circle-plus" id="plus"></i
@@ -271,9 +270,7 @@
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="/images/back-images/White-logo.svg" alt="logo" /><img
-                src="/images/back-images/white-text-logo.svg"
-                alt="logo"
+              ><img src="/images/back-images/White-logo.svg" alt="logo"
             /></a>
             <span>
               <h3>Contact</h3>
@@ -282,7 +279,7 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
+          <h5>©2023 <big>Best Offer Deals</big> all rights reserved</h5>
         </div>
       </div>
     </footer>
