--- a/pages/edits/adding-product_edit.html
+++ b/pages/edits/adding-product_edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Offers</title>
-    <link rel="icon" href="images/logo-web.svg" type="web-logo" />
+    <link rel="icon" href="/images/logo-web.svg" type="web-logo" />
     <link rel="apple-touch-icon" href="images/logo-web.svg" />
     <link href="https://fonts.cdnfonts.com/css/cunia" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -14,7 +14,43 @@
     />
     <!-- LOGIC OF THIS PAGE -->
     <script defer src="/js/adding-products.js"></script>
+    <!-- icons -->
+    <link
+      rel="stylesheet"
+      data-purpose="Layout StyleSheet"
+      title="Web Awesome"
+      href="/css/app-wa-54e7be3a62ca9b7580d7f8c669f59e74.css?vsn=d"
+    />
 
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-duotone-solid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-thin.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-solid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-regular.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-light.css"
+    />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -26,7 +62,6 @@
         <section class="header-elem">
           <a href="/index.html" class="header-elem__logo">
             <img src="/images/logo-web.svg" alt="logo" />
-            <img src="/images/logo-text.svg" alt="text" />
           </a>
           <a href="/pages/404-error.html" class="company">Company</a>
           <div class="phone-box">
@@ -45,7 +80,8 @@
             <a
               href="/pages/registrations/create-account.html"
               class="header-elem__btn"
-              ><i class="bx bx-user-circle"></i><span>Profile</span>
+              ><i class="fa-solid fa-circle-user fa-2xl"></i
+              ><span>Profile</span>
             </a>
             <button class="translate-btn">Rus</button>
           </div>
@@ -133,9 +169,7 @@
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="/images/back-images/White-logo.svg" alt="logo" /><img
-                src="/images/back-images/white-text-logo.svg"
-                alt="logo"
+              ><img src="/images/back-images/White-logo.svg" alt="logo"
             /></a>
             <span>
               <h3>Contact</h3>
@@ -144,7 +178,7 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
+          <h5>©2023 <big>Best Offer Deals</big> all rights reserved</h5>
         </div>
       </div>
     </footer>
