--- a/pages/edits/under-review.html
+++ b/pages/edits/under-review.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Offers</title>
-    <link rel="icon" href="images/logo-web.svg" type="web-logo" />
-    <link rel="apple-touch-icon" href="images/logo-web.svg" />
+    <link rel="icon" href="/images/logo-web.svg" type="web-logo" />
+    <link rel="apple-touch-icon" href="/images/logo-web.svg" />
     <link href="https://fonts.cdnfonts.com/css/cunia" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- icons -->
+    <link
+      rel="stylesheet"
+      data-purpose="Layout StyleSheet"
+      title="Web Awesome"
+      href="/css/app-wa-54e7be3a62ca9b7580d7f8c669f59e74.css?vsn=d"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-duotone-solid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-thin.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-solid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-regular.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-light.css"
+    />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -23,7 +60,6 @@
         <section class="header-elem">
           <a href="/index.html" class="header-elem__logo">
             <img src="/images/logo-web.svg" alt="logo" />
-            <img src="/images/logo-text.svg" alt="text" />
           </a>
           <a href="/pages/404-error.html" class="company">Company</a>
           <div class="phone-box">
@@ -79,9 +115,7 @@
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="/images/back-images/White-logo.svg" alt="logo" /><img
-                src="/images/back-images/white-text-logo.svg"
-                alt="logo"
+              ><img src="/images/back-images/White-logo.svg" alt="logo"
             /></a>
             <span>
               <h3>Contact</h3>
@@ -90,7 +124,7 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
+          <h5>©2023 <big>Best Offer Deals</big> all rights reserved</h5>
         </div>
       </div>
     </footer>
